--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://your-vercel-deployment-url.com">
+  <meta http-equiv="refresh" content="0; url=https://debank-coral.vercel.app/">
   <title>Redirecting...</title>
 </head>
 
