--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <p>Redirecting to Vercel deployment</p>
   <p>If you are not redirected, <a href="https://debank-coral.vercel.app/">click here</a>.</p>
 </body>
 
