--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://debank-coral.vercel.app/">
+  <meta http-equiv="refresh" content="0; url=https://debank-ji9n.onrender.com/">
   <title>Redirecting...</title>
 </head>
 
 <body>
   <p>Redirecting to Vercel deployment</p>
-  <p>If you are not redirected, <a href="https://debank-coral.vercel.app/">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://debank-ji9n.onrender.com/">click here</a>.</p>
 </body>
 
 </html>
