--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <p>Redirecting to Vercel deployment</p>
+  <p>Redirecting to deployment</p>
   <p>If you are not redirected, <a href="https://debank-ji9n.onrender.com/">click here</a>.</p>
 </body>
 
